[gd_scene load_steps=9 format=3 uid="uid://bvpntidioecs2"]

[ext_resource type="Script" uid="uid://car65kfwh3rsf" path="res://addons/scene_palette/components/sub_palette.gd" id="1_refpc"]
[ext_resource type="Texture2D" uid="uid://ctldgrobprn3a" path="res://addons/scene_palette/icons/arrow-side.png" id="2_k85x0"]
[ext_resource type="Texture2D" uid="uid://dg43kqqa73uxa" path="res://addons/scene_palette/icons/arrow-down.png" id="3_vnqya"]
[ext_resource type="Texture2D" uid="uid://b43s7q6v2vb4" path="res://addons/scene_palette/icons/file-folder.png" id="4_he5ce"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_65kn4"]
bg_color = Color(0.333333, 0.368627, 0.431373, 0.243137)
border_width_left = 2
border_width_top = 1
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0588235, 0.0705882, 0.0901961, 0.203922)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0.0563122, 0.080628, 0.128452, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ow4wf"]
bg_color = Color(0.784314, 0.784314, 0.784314, 0.14902)
corner_radius_top_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_phfrh"]
bg_color = Color(0.775733, 0.789583, 0.777343, 0.254902)
corner_radius_top_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3q58g"]
content_margin_left = 6.0
content_margin_top = 1.0
content_margin_right = 6.0
content_margin_bottom = 1.0
bg_color = Color(0.6, 0.6, 0.6, 0.203922)
corner_radius_top_right = 6

[node name="SubPalette" type="MarginContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 26.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_refpc")
arrow_closed = ExtResource("2_k85x0")
arrow_open = ExtResource("3_vnqya")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_65kn4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="SubPalette" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HeaderBar" type="HBoxContainer" parent="MarginContainer/SubPalette"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleMinimizeButton" type="Button" parent="MarginContainer/SubPalette/HeaderBar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_disabled_color = Color(0.764706, 0.741176, 0.776471, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_ow4wf")
theme_override_styles/hover = SubResource("StyleBoxFlat_ow4wf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_phfrh")
theme_override_styles/normal = SubResource("StyleBoxFlat_ow4wf")
toggle_mode = true
text = "Subfolder name"
icon = ExtResource("3_vnqya")

[node name="CollapseSubDirButton" type="CheckButton" parent="MarginContainer/SubPalette/HeaderBar"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Flatten one level of subdirectories."
text = "flat"

[node name="ShowinFileSystemButton" type="Button" parent="MarginContainer/SubPalette/HeaderBar"]
layout_mode = 2
tooltip_text = "Show in FileSystem browser"
theme_override_styles/normal = SubResource("StyleBoxFlat_3q58g")
icon = ExtResource("4_he5ce")

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer/SubPalette"]
unique_name_in_owner = true
layout_mode = 2

[node name="SceneDropGridContainer" type="HFlowContainer" parent="MarginContainer/SubPalette/ContentContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SubPaletteContainerContainer" type="MarginContainer" parent="MarginContainer/SubPalette/ContentContainer"]
layout_mode = 2

[node name="SubPaletteContainer" type="VBoxContainer" parent="MarginContainer/SubPalette/ContentContainer/SubPaletteContainerContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="toggled" from="MarginContainer/SubPalette/HeaderBar/TitleMinimizeButton" to="." method="_on_title_minimize_button_toggled"]
[connection signal="toggled" from="MarginContainer/SubPalette/HeaderBar/CollapseSubDirButton" to="." method="_on_collapse_sub_dir_button_toggled"]
[connection signal="pressed" from="MarginContainer/SubPalette/HeaderBar/ShowinFileSystemButton" to="." method="_on_showin_file_system_button_pressed"]
